@@ -38,6 +38,10 @@ namespace irr
 		//! runs the device. Returns false if device wants to be deleted
 		virtual bool run();
 
+		//! Cause the device to temporarily pause execution and let other processes to run
+		// This should bring down processor usage without major performance loss for Irrlicht
+		virtual void yield();
+
 		//! sets the caption of the window
 		virtual void setWindowCaption(const wchar_t* text);
 
