@@ -1,5 +1,14 @@
 Changes in version 1.3 (?? ??? 2007)
 
+- Fixed the getLightData method of ILightSceneNode by changing it from
+	'void getLightData(SLight&)' to 'const SLight& getLightData()'. This
+	breaks the current API but avoids those cases where the SLight is changed
+	via the reference but does not update necessary internal states.
+
+- Added yield() method to IrrlichtDevice which allows to pause the Irrlicht process for
+	a very short time. This allows other processes to execute without a major
+	penalty for the Irrlicht application.
+
 - B3D changes by Luke: 
 	Texture scaling bugfix, support for alpha blending, 
 	new option to normalise weights, animation code optimization, fixed memory leak
